--- a/src/components/infopages/Terms.astro
+++ b/src/components/infopages/Terms.astro
@@ -5,34 +5,42 @@ import Title from "@components/global/Title.astro";
 <section>
 	<div class="mx-auto max-w-7xl px-8 py-12 md:px-12 lg:px-32 lg:py-32">
 		<div>
-			<Title title="Terms" subtitle="Last updated January 1, 2024" class="pb-10 pt-20 uppercase" />
+			<Title title="Koşullar" subtitle="Son güncelleme: 1 Eylül 2025" class="pb-10 pt-20 uppercase" />
 		</div>
 		<div class="prose-styles mt-12 lg:mt-24">
-			<h2 id="description-all-the-terms-that-you-agree-to-when-you-sign-up-for-a-Majestico-product-">
-				All the terms that you agree to when you sign up for a Majestico product.
+			<h2 id="description-tüm-kurallar-ve-şartlar">
+				Vakıf web sitemizi ve hizmetlerimizi kullanırken kabul ettiğiniz temel koşullar.
 			</h2>
 
 			<p>
-				From everyone at Mintaka, thank you for using our products! We build them to help you do your best work. There are millions of people
-				using Mintaka products every day. Because we don't know every one of our customers personally, we have to put in place some Terms of
-				Service to help keep the ship afloat.
-			</p>
-			<p>
-				When we say "Company", "we", "our", or "us" in this document, we are referring to Mintaka, a leading agency in [industry/field]. We
-				specialize in [brief description of services and products].
-			</p>
-			<p>
-				When we say "Services", we mean our websites, including [www.mintaka.com], and any product created and maintained by Mintaka, such as
-				[list specific services or products].
-			</p>
-			<p>
-				When we say "You" or "your", we are referring to the people or organizations that own an account with one or more of our Services. Our
-				products are designed to empower [your target audience] in [specific ways].
+				Kardiyovasküler Araştırmalar Vakfı (KAV) olarak, kalp ve damar sağlığını geliştirmeye yönelik çalışmalarımıza gösterdiğiniz ilgi için teşekkür ederiz.
+				Sitemizde yer alan bilgiler, projeler ve dijital içerikler siz değerli ziyaretçilerimizin erişimine sunulmuştur.
 			</p>
 
-			<p>WIP.</p>
+			<p>
+				Bu belgede geçen "Vakıf", "biz", "bizim" veya "tarafımız" ifadeleri, Kardiyovasküler Araştırmalar Vakfı’nı temsil etmektedir. 
+				Vakfımız, kardiyovasküler sağlık alanında araştırmalar, eğitim faaliyetleri ve toplumsal faydaya yönelik projeler yürütmektedir.
+			</p>
 
-			<p>If you have any questions about these Terms, please contact us at [support@mintaka.it].</p>
+			<p>
+				"Web sitesi" veya "hizmetler" ile, <a href="https://kav.org.tr">www.kav.org.tr</a> adresinde yayınlanan tüm sayfalar, etkinlik duyuruları, 
+				bilimsel içerikler ve vakıf tarafından sağlanan çevrimiçi platformlar kastedilmektedir.
+			</p>
+
+			<p>
+				"Ziyaretçi", "kullanıcı" veya "siz" ifadeleri, vakıf web sitesine erişen ve hizmetlerden yararlanan kişileri ya da kurumları ifade eder. 
+				Web sitemiz yalnızca bilgilendirme ve eğitim amaçlıdır; içerikler tıbbi tavsiye niteliği taşımamaktadır. 
+				Kendi sağlığınızla ilgili kararları mutlaka hekim tavsiyesi doğrultusunda alınız.
+			</p>
+
+			<p>
+				Vakıf, web sitesinde sunulan içerikleri ve kullanım koşullarını gerektiğinde güncelleme hakkını saklı tutar. 
+				Güncellemeleri takip etmek kullanıcıların sorumluluğundadır.
+			</p>
+
+			<p>
+				Herhangi bir sorunuz olursa bizimle <a href="mailto:info@kav.org.tr">info@kav.org.tr</a> adresi üzerinden iletişime geçebilirsiniz.
+			</p>
 		</div>
 	</div>
 </section>
