--- a/src/components/global/BlobCursorFollower.astro
+++ b/src/components/global/BlobCursorFollower.astro
@@ -116,7 +116,7 @@
 		left: 0;
 		height: 500px;
 		width: 500px;
-		background-color: #edb74d;
+		background-color: #888888;
 		-webkit-transform: scale(0.5);
 		transform: scale(0.5);
 	}
