--- a/src/pages/en/terms.astro
+++ b/src/pages/en/terms.astro
@@ -4,9 +4,9 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 import type { AstroSeoProps } from "@astrolib/seo";
 
 const seo: AstroSeoProps = {
-	title: "Terms of Service - Majestico Studio: Understand Our Terms",
+	title: "Terms of Service - CVR Foundation",
 	description:
-		"Read the Terms of Service for Majestico Studio. Learn about our guidelines and your responsibilities when using our web design and SEO services.",
+		"Read the Terms of Service for Cardiovascular Research Foundation. Learn about our guidelines and your responsibilities when using our web site and services.",
 	canonical: "https://mintaka.co/it/terms/",
 };
 ---
