--- a/src/components/blog/Newsletter.astro
+++ b/src/components/blog/Newsletter.astro
@@ -9,7 +9,7 @@ const translatePath = useTranslatedPath(lang);
 
 <div class:list={["relative mt-8 h-20 max-w-[30rem] leading-6 lg:max-w-[35rem]", className]}>
 	<div class="origin-left-center squircle-bg-light absolute h-full w-full scale-100 transform rounded-xl bg-slate-200"></div>
-	<form class="h-full">
+	<form class="h-full" netlify>
 		<input
 			type="email"
 			name="EMAIL"
